# QtAppBase

./: .azure-pipelines.yml  CMakeLists.txt  README.md  conanfile.py  info.json
.github/workflows/: main.yml
CMake/: AndroidManifest.xml.in  AppImage.cmake  AppImage.desktop.in  GetDependencies.cmake  MaterialIcons.cmake  QtAppBase.cmake  QtAppBase.desktop.in  QtAppBaseCommon.cmake  QtIF.cmake  QtIF.config.in  QtIF.package.in
hostProfiles/: raspberrypios-bullseye.profile
src/: AdvancedQmlApplicationEngine.cpp  AdvancedQmlApplicationEngine.h  CMakeLists.txt  LogMessageHandler.cpp  LogMessageHandler.h  QtAppBaseConfig.cmake.in  QtApplicationBase.cpp  QtApplicationBase.h  Secret.cpp  Secret.h  SecretsManager.cpp  SecretsManager.h  main.cpp  mainQml.cpp  mainWidgets.cpp
src/QtAppBase/: main.qml
src/QtAppBaseTest/: main.qml
src/android/: SecretsManagerImpl.cpp
src/linux/: SecretsManagerImpl.cpp
src/qml/: main.qml
src/windows/: SecretsManagerImpl.cpp
